<resources>
    <string name="app_name">A Connect</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="news_and_announcements">News and announcements</string>
    <string name="explore">Explore</string>
    <string name="community">Community</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="donation">Donation</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="job">Job</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="job_events"><![CDATA[Job & Events]]></string>
    <string name="announcement">Announcement</string>
    <string name="college">College</string>
    <string name="college_image">College Image</string>
    <string name="add_image">Add Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="add_shart_tag_line">Add Short Tag Line</string>
    <string name="tagline">Tagline</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="gmail">Gmail</string>
    <string name="import_excel_data">Import Excel Data</string>
    <string name="millestones">Millestones</string>
    <string name="posts">Posts</string>
    <string name="add_millestone">Add Millestone</string>
    <string name="grid_item_1">Grid Item 1</string>
    <string name="grid_item_2">Grid Item 2</string>
    <string name="grid_item_3">Grid Item 3</string>
    <string name="grid_item_4">Grid Item 4</string>
    <string name="grid_item_5">Grid Item 5</string>
    <string name="grid_item_6">Grid Item 6</string>
    <string name="grid_item_7">Grid Item 7</string>
    <string name="grid_item_8">Grid Item 8</string>
    <string name="grid_item_9">Grid Item 9</string>
    <string name="grid_item_10">Grid Item 10</string>
    <string name="grid_item_11">Grid Item 11</string>
    <string name="grid_item_12">Grid Item 12</string>
    <string name="university_name">University Name</string>
    <string name="bio">Bio</string>
    <string name="insert_your_link_here">insert your link here</string>
    <string name="thread_icon">Thread Icon</string>
    <string name="gmail_icon">gmail Icon</string>
    <string name="gmail_icon1">Gmail Icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="linkedin_icon">LinkedIn Icon</string>
    <string name="college_email_address">College Email Address</string>
    <string name="write_something_about_yourself">Write Something about yourself</string>
    <string name="write_something_about_yourself1">Write Something about yourself</string>
    <string name="submit">Submit</string>
    <string name="universityemailaddress_gmail_com">universityemailaddress@gmail.com</string>
    <string name="social_links">Social links</string>


    <string name="_1_234_nposts">1,234\nPosts</string>
    <string name="_5_678_nstudents">5,678\nStudents</string>
    <string name="_9_101_nalumni">9,101\nAlumni</string>
    <string name="get_your_unique_id_txt">✨ Get your Unique ID ✨</string>
    <string name="edit_profile_txt">Edit Profile</string>
    <string name="share_profile_txt">Share Profile</string>
    <string name="alumni_edit_profile_name">Name</string>
    <string name="alumni_profile_date_of_birth_txt">Date Of Birth</string>
    <string name="alumni_edit_profile_dateofbirth">dd/mm/yy</string>
    <string name="male_txt">Male</string>
    <string name="female_txt">Female</string>
    <string name="others__txt">Others</string>
    <string name="alumni_editprofile_hint_txt">existingpersonal@gmail.com</string>
    <string name="phone_number_txt">Phone Number</string>
    <string name="alumni_phone_no_hint">9876543210</string>
    <string name="alumni_collage_name_txt">Collage Name</string>
    <string name="alumni_collage_name_hint">Collage</string>
    <string name="alumni_graduation_year_txt">Graduation Year</string>
    <string name="alumni_editprofile_year_hint_txt">year</string>
    <string name="alumni_edit_degree_hint_txt">Degree(specialisation)</string>
    <string name="degree_obtained_txt">Degree Obtained</string>
    <string name="student_edit_profile_name">Name</string>
    <string name="edit_student_name_txt">Name</string>
    <string name="student_date_of_birth">Date Of Birth</string>
    <string name="student_edit_DOB">dd/mm/yy</string>
    <string name="alumini_gender">Gender</string>
    <string name="student_gender">Gender</string>
    <string name="student_collage_name">Collage</string>
    <string name="student_edit_email_hint">existingpersonal@gmail.com</string>
    <string name="student_edit_year">year</string>
    <string name="student_edit_graduation_year">year</string>
    <string name="student_degree_specialisation_txt">Degree(specialisation)</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_numbertxt">987653210</string>
    <string name="image_buttons">Image Buttons</string>
    <string name="edit_profile" />
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="back_to_main_login">back to main login</string>
    <string name="app_image">app image</string>
    <string name="admin_login">Admin Login</string>
    <string name="outline">outline</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit_button">submit credentials</string>
    <string name="college_name">College Name</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="alumni">Alumni</string>
    <string name="student">Student</string>
    <string name="logout_as_alumni">log out as alumni</string>
    <string name="news">News</string>
    <string name="eligible_course_and_branch">Eligible Course and Branch</string>
    <string name="eligible_batch">Eligible Batch</string>
    <string name="roles_and_responsibilities">Roles And Responsibilities</string>
    <string name="specific_requirements">Specific Requirements</string>
    <string name="selection_process">Selection Process</string>
    <string name="campus_interview">Campus Interview</string>
    <string name="tentative_joining_date">Tentative Joining Date</string>
    <string name="bond_to_be_signed">Bond to be signed</string>
    <string name="about_company">About Company</string>
    <string name="apply">Apply</string>
    <string name="n_a">N/A</string>
    <string name="will_be_informed">will be informed</string>
    <string name="paragraph_about_the_company">Paragraph about the company Paragraph about the company Paragraph about the company Paragraph about the company Paragraph about the company Paragraph about the company.</string>
    <string name="todo">TODO</string>
    <string name="company_website">Company Website</string>
    <string name="deadline_for_registration">DeadLine For Registration</string>
    <string name="dd_mm_yyyy_till_5_p_m">dd/mm/yyyy till 5 p.m.</string>
    <string name="software_developer_1">Software Developer 1</string>
    <string name="google">Google</string>
    <string name="on_site">On Site</string>
    <string name="icon">icon</string>
    <string name="noida_delhi">Noida, Delhi</string>
    <string name="two_days_ago">Two Days Ago</string>
    <string name="january_5_2025">January,5 2025</string>
    <string name="b_tech_cs_it_ec">B.tech(CS/IT/EC)</string>
    <string name="_2025_pass_outs">2025 Pass outs</string>
    <string name="text">bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="three_round_of_interview">Three Round of Interview</string>
    <string name="trending_news">Trending News</string>
    <string name="voice_input">Voice Input</string>
    <string name="search">Search</string>
    <string name="notification">notification</string>
    <string name="chat">chat</string>
    <string name="search_here">Search here...</string>
    <string name="community_posts">community posts</string>
    <string name="nothing_to_show">Nothing to Show</string>
    <string name="view_full_map">View Full Map</string>
    <string name="create_post">Create Post</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


</resources>