<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <item android:id="@+id/bottom_nav_home"
        android:title="@string/home"
        android:icon="@drawable/home_icon"/>

    <item android:id="@+id/bottom_nav_community"
        android:title="@string/community"
        android:icon="@drawable/community_icon"/>

    <item android:id="@+id/bottom_nav_explore"
        android:title="@string/explore"
        android:icon="@drawable/explore_icon"/>

    <item android:id="@+id/bottom_nav_job"
        android:title="@string/job_events"
        android:icon="@drawable/student_jobsearch_icon"/>

    <item android:id="@+id/bottom_nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"/>

</menu>