<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Grid Layout -->
        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/milestonesGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:columnCount="3"
            app:rowCount="4"
            app:useDefaultMargins="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Grid Items -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_2" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_3" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_4" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_5" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_6" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_7" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_8" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_9" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_10" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_11" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/blue5"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:contentDescription="@string/grid_item_12" />

        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


