

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.MainLogin">

    <ImageView

        android:id="@+id/mainLoginAppLogo"

        android:contentDescription="@string/app_image"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_app_icon"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="50dp"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainLoginTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLoginAppLogo"
        app:tabIndicatorColor="@color/blue1"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="5dp"
        app:tabMode="fixed"


        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/alumni" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/student" />
    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mainLoginViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/mainLoginTabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>